# SerialTerminal

./: .gitignore  README.MD  buttons.yml  main.py  project.yml  pyproject.toml  requirements.txt  sequence_handler.py  sequences.yml  settings.yml
config/: settings.py
models/: frame.py  shelf_data.py
serial_comm/: connection.py  protocol.py  receiver.py
ui/: app.py  styles.tcss
ui/handlers/: button_handlers.py  table_handlers.py
ui/widgets/: control_buttons.py  data_table.py  dynamic_control_buttons.py  import_settings.py  log_panel.py  quick_send.py  serial_bar.py  status_panel.py
utils/: formatting.py
